--- a/index.html
+++ b/index.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <div class="display">567.541.542</div>
+    <div class="digits">
+        <button id="one">1</button>
+        <button id="two">2</button>
+        <button id="three">3</button>
+        <button id="four">4</button>
+        <button id="five">5</button>
+        <button id="six">6</button>
+        <button id="seven">7</button>
+        <button id="eight">8</button>
+        <button id="nine">9</button>
+        <button id="zero">0</button>  
+    </div>
+    <div class="operators">
+        <button id="add">+</button>
+        <button id="substract">-</button>
+        <button id="multiply">x</button>
+        <button id="divide">/</button>
+    </div>
+    <div class="equal">
+        <button id="equal">=</button>
+    </div>
 </body>
 </html>
